--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             {
                 text: "De los siguientes principios de la Hidrostática, selecciona los que son correctos.",
                 options: [
+                    "1. La presión del interior de un líquido no actúa en todas las direcciones.",
+                    "2. La presión es más alta cuanto mayor sea la profundidad.",
+                    "3. La presión es menor cuanto mayor sea la densidad del líquido.",
+                    "4. La presión no depende de la forma ni de la amplitud del recipiente.",
                     "A) 1 y 2",
                     "B) 2 y 3",
                     "C) 2 y 4",
